testdata/baselines/reference/compiler/tluaFunctionSyntaxErrors.errors.txt
tluaFunctionSyntaxErrors.tlua(1,7): error TLUA1359: Identifier expected. 'end' is a reserved word that cannot be used here.
tluaFunctionSyntaxErrors.tlua(1,11): error TLUA1128: Declaration or statement expected.
tluaFunctionSyntaxErrors.tlua(5,1): error TLUA1005: 'end' expected.


==== tluaFunctionSyntaxErrors.tlua (3 errors) ====
    local end = 1;
          ~~~
!!! error TLUA1359: Identifier expected. 'end' is a reserved word that cannot be used here.
              ~
!!! error TLUA1128: Declaration or statement expected.
    
    local function missingEnd(): void
      return;
    
    
!!! error TLUA1005: 'end' expected.